--- a/allow-tor_ips_v4.conf
+++ b/allow-tor_ips_v4.conf
@@ -208,6 +208,7 @@ allow 176.65.149.87;
 allow 176.65.149.88;
 allow 176.65.149.96;
 allow 176.65.151.192;
+allow 176.65.151.193;
 allow 176.65.151.194;
 allow 176.97.114.202;
 allow 177.93.140.66;
@@ -813,6 +814,9 @@ allow 23.191.200.23;
 allow 23.191.200.24;
 allow 23.191.200.25;
 allow 23.191.200.26;
+allow 23.191.200.27;
+allow 23.191.200.28;
+allow 23.191.200.29;
 allow 23.191.200.3;
 allow 23.191.200.30;
 allow 23.191.200.31;
@@ -986,6 +990,7 @@ allow 51.91.18.151;
 allow 5.196.95.34;
 allow 5.253.247.27;
 allow 5.255.100.224;
+allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.101.131;
 allow 5.255.103.235;
