--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -917,10 +917,12 @@ deny 23.191.200.24;
 deny 23.191.200.25;
 deny 23.191.200.26;
 deny 23.191.200.27;
-deny 23.191.200.28;
 deny 23.191.200.29;
 deny 23.191.200.3;
 deny 23.191.200.30;
+deny 23.191.200.31;
+deny 23.191.200.4;
+deny 23.191.200.6;
 deny 23.191.200.7;
 deny 23.191.200.8;
 deny 23.191.200.9;
@@ -944,6 +946,7 @@ deny 2.58.56.220;
 deny 2.58.56.35;
 deny 2.58.56.43;
 deny 2.58.56.93;
+deny 2600:3c00::f03c:91ff:fe73:f9ba;
 deny 2600:3c00::f03c:91ff:fe96:1cd9;
 deny 2600:3c00::f03c:95ff:fe5d:8f00;
 deny 2600:3c03::f03c:95ff:fe5d:562;
