--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -13,6 +13,7 @@ allow 103.251.167.10;
 allow 103.251.167.20;
 allow 103.253.24.18;
 allow 103.28.52.93;
+allow 103.91.65.44;
 allow 104.167.241.4;
 allow 104.192.3.74;
 allow 104.219.236.100;
@@ -207,6 +208,7 @@ allow 176.65.149.96;
 allow 176.65.151.192;
 allow 176.65.151.193;
 allow 176.65.151.194;
+allow 176.9.3.9;
 allow 176.97.114.202;
 allow 177.93.140.66;
 allow 178.17.170.144;
@@ -276,8 +278,6 @@ allow 185.130.47.58;
 allow 185.14.31.113;
 allow 185.150.28.13;
 allow 185.153.198.65;
-allow 185.154.110.142;
-allow 185.154.110.17;
 allow 185.156.72.7;
 allow 185.165.169.239;
 allow 185.165.171.84;
@@ -755,6 +755,7 @@ allow 204.137.14.105;
 allow 204.137.14.106;
 allow 204.137.14.92;
 allow 204.194.29.4;
+allow 204.76.203.203;
 allow 204.8.156.142;
 allow 204.85.191.7;
 allow 204.85.191.8;
@@ -770,6 +771,7 @@ allow 205.185.121.177;
 allow 205.185.123.93;
 allow 205.185.124.176;
 allow 206.166.251.193;
+allow 208.87.242.7;
 allow 209.141.32.181;
 allow 209.141.32.198;
 allow 209.141.34.15;
@@ -922,11 +924,9 @@ allow 23.191.200.26;
 allow 23.191.200.27;
 allow 23.191.200.28;
 allow 23.191.200.29;
-allow 23.191.200.3;
-allow 23.191.200.30;
 allow 23.191.200.31;
 allow 23.191.200.4;
-allow 23.191.200.5;
+allow 23.191.200.6;
 allow 23.191.200.7;
 allow 23.191.200.8;
 allow 23.191.200.9;
@@ -977,6 +977,7 @@ allow 2602:fc24:19:524::1;
 allow 2602:fc24:19:eb06::dead;
 allow 2602:fccf:100:3::14;
 allow 2604:2dc0:202:300::ed3;
+allow 2604:6600::4ee;
 allow 2604:a00:101:4:216:3eff:fe2f:1c84;
 allow 2604:a00:101:4:216:3eff:fe2f:20c3;
 allow 2604:b480:3:6::2;
@@ -1174,6 +1175,7 @@ allow 2a00:99a0:0:1000::2;
 allow 2a00:c70:1:185:246:84:179:1;
 allow 2a01:270:9847::1;
 allow 2a01:4f8:10a:2d23::2;
+allow 2a01:4f8:141:3305::2;
 allow 2a01:5e0:36:c311::1;
 allow 2a01:5e0:36:cf2a::1;
 allow 2a01:6340:2:501::10;
@@ -1598,7 +1600,6 @@ allow 2c0f:6c0:0:d::d28b;
 allow 31.129.22.65;
 allow 31.133.0.210;
 allow 31.184.236.104;
-allow 31.220.75.237;
 allow 31.40.204.206;
 allow 31.44.238.25;
 allow 35.0.127.52;
@@ -1629,6 +1630,7 @@ allow 38.135.25.142;
 allow 38.135.25.143;
 allow 38.135.25.144;
 allow 38.135.25.2;
+allow 38.242.254.131;
 allow 38.60.250.79;
 allow 38.97.116.242;
 allow 38.97.116.243;
@@ -1685,6 +1687,7 @@ allow 45.148.10.111;
 allow 45.154.98.33;
 allow 45.38.20.123;
 allow 45.38.20.153;
+allow 45.38.20.181;
 allow 45.58.190.74;
 allow 45.61.185.172;
 allow 45.61.188.15;
@@ -1831,7 +1834,6 @@ allow 81.171.0.89;
 allow 81.17.28.95;
 allow 82.118.248.205;
 allow 82.153.138.125;
-allow 82.153.138.241;
 allow 82.153.138.7;
 allow 82.221.128.191;
 allow 82.221.131.5;
