--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -910,6 +910,7 @@ allow 23.191.200.16;
 allow 23.191.200.17;
 allow 23.191.200.18;
 allow 23.191.200.19;
+allow 23.191.200.2;
 allow 23.191.200.20;
 allow 23.191.200.21;
 allow 23.191.200.22;
@@ -918,9 +919,13 @@ allow 23.191.200.24;
 allow 23.191.200.25;
 allow 23.191.200.26;
 allow 23.191.200.27;
+allow 23.191.200.28;
+allow 23.191.200.29;
 allow 23.191.200.3;
 allow 23.191.200.30;
+allow 23.191.200.31;
 allow 23.191.200.4;
+allow 23.191.200.5;
 allow 23.191.200.7;
 allow 23.191.200.8;
 allow 23.191.200.9;
@@ -1229,6 +1234,7 @@ allow 2a04:52c0:103:5acd::1;
 allow 2a04:52c0:104:31e6::1;
 allow 2a04:52c0:104:4735::1;
 allow 2a04:52c0:104:ad97::1;
+allow 2a04:52c0:105:d7eb::1;
 allow 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 allow 2a04:52c0:106:d219::1;
 allow 2a04:52c0:108:a34f::1;
@@ -1678,6 +1684,7 @@ allow 45.148.10.111;
 allow 45.154.98.33;
 allow 45.38.20.123;
 allow 45.38.20.153;
+allow 45.38.20.181;
 allow 45.58.190.74;
 allow 45.61.185.172;
 allow 45.61.188.15;
@@ -1687,7 +1694,6 @@ allow 45.66.35.21;
 allow 45.66.35.22;
 allow 45.66.35.31;
 allow 45.66.35.32;
-allow 45.66.35.33;
 allow 45.66.35.34;
 allow 45.66.35.35;
 allow 45.79.144.222;
@@ -1744,6 +1750,7 @@ allow 51.89.138.51;
 allow 51.91.18.151;
 allow 5.196.95.34;
 allow 5.253.247.27;
+allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.101.131;
 allow 5.255.103.235;
